test/expected/set_xxx.out
cdecl> set xxx
           ^
5: error: "xxx": unknown set option
